<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CityGen</string>
    <string name="bollard">Poller</string>
    <string name="btn_barriers" tools:ignore="ExtraTranslation">Barrieren</string>
    <string name="btn_building_structure">Baustruktur</string>
    <string name="btn_community_area">Bereiche für Gemeinschaft</string>
    <string name="btn_developmentarea">Entwicklungsareale</string>
    <string name="btn_distribution_accumulation_of_power">Verteilung/ Machtakkumulation</string>
    <string name="btn_dynamics_of_user_group">Dynamik der Nutzergruppe</string>
    <string name="btn_flexibility_room_structure">Flexibilität der Raumstruktur</string>
    <string name="btn_generate">Generieren</string>
    <string name="btn_infrastructur">Infrastruktur</string>
    <string name="btn_interference_usage_pattern">Interferenz Nutzungsmuster</string>
    <string name="btn_interventions">Interventionen</string>
    <string name="btn_materials">Materialien</string>
    <string name="btn_modul">Modul</string>
    <string name="btn_placeholder">Platzhalter</string>
    <string name="btn_places">Orte</string>
    <string name="btn_play">Play</string>
    <string name="btn_possession_property">Besitz/ Eigentum</string>
    <string name="btn_respect">Respekt</string>
    <string name="btn_save">speichern</string>
    <string name="btn_self_similarity">Selbstähnlichkeit</string>
    <string name="btn_social_structure_principles">soziales Gliederungsprinzip</string>
    <string name="btn_solutions">Variante</string>
    <string name="btn_spatial_structure_principles">räumliches Gliederungsprinzip</string>
    <string name="btn_spots">Spots/ Landmarks</string>
    <string name="btn_strategy">Strategien</string>
    <string name="btn_submit">Weiter</string>
    <string name="btn_survival_logic">Überlebenslogik</string>
    <string name="btn_universal_space_concept">universelle Raumlehre/ Konzepte</string>
    <string name="density">Wählen Sie die Dichte aus:</string>
    <string name="fence">Zaun</string>
    <string name="fire_emergency">Feuer/Notfall (Abbau von Gebäuden)</string>
    <string name="hint_txt">Test Input Feld</string>
    <string name="knowledge_expansion">Wissen Ausdehnung</string>
    <string name="limit">Begrenzung</string>
    <string name="menu_help">Hilfe</string>
    <string name="menu_pg">Projektgruppe</string>
    <string name="menu_restartSession">Session zurücksetzen</string>
    <string name="mobile_structural_elements">mobile bauliche Elemente</string>
    <string name="networking">Vernetzung</string>
    <string name="orientation">Orientierung</string>
    <string name="preservation_roadwidth">Erhalt der Straßenbreite (z.B. Verschattungssystem)</string>
    <string name="safety">Sicherheit</string>
    <string name="seekBar_trafficDensity">Genem Sie die Verkehrsauslastung an:</string>
    <string name="seekBar_networking">Geben Sie die Dynamik in Bezug auf Vernetzung an:</string>
    <string name="seekBar_privacy">Geben Sie den Grad der Privatheit an:</string>
    <string name="shape">Wählen Sie eine Form aus:</string>
    <string name="spinner_userGroupNetworking">Bitte wählen Sie die Art der Vernetzung aus</string>
    <string name="street_outer_boundary">Straße als äußere Begrenzung</string>
    <string name="switch_barriersInhibitionThreshold">Es soll eine psychologische Hemmschwelle zur Übertretung geschaffen werden</string>
    <string name="switch_barriersNoVisualInsights">Optische Einblicke sollen erschwert werden</string>
    <string name="switch_infrastructureCars">Autos nehmen am Verkehr teil</string>
    <string name="switch_infrastructureCentralSupplyLocation">Es soll zentrale Versorgunsorte für z.B. Energie und Wasser geben</string>
    <string name="switch_infrastructureLivingCloseToNature">Man soll in der Natur bzw. naturnah leben</string>
    <string name="switch_infrastructureOnlyPedestrians">Fußgänger sind die einzigen Verkehrsteilnehmer</string>
    <string name="switch_infrastructureOptimizedTrafficNetwork">Das Verkehrsnetz soll optimiert werden</string>
    <string name="switch_infrastructureRecreation">Es soll Orte der Erholung (in der Umgebung) geben</string>
    <string name="switch_infrastructureSaveResources">Ressourcen sollen geschützt bzw. erhalten werden</string>
    <string name="switch_infrastructureTrafficConcept">Es soll ein Verkehrskontzept vorgegeben werden</string>
    <string name="switch_interferenceUsagePatternAgriculturalArea">Funktionstrennung Agrarfläche/Garten</string>
    <string name="switch_interferenceUsagePatternBusiness">Funktionstrennung Gewerbe/Arbeiten</string>
    <string name="switch_interferenceUsagePatternCommonRoom">Funktionstrennung Gemeinschaftsräume</string>
    <string name="switch_interferenceUsagePatternCulture">Funktionstrennung Theater/Kultur</string>
    <string name="switch_interferenceUsagePatternGastronomy">Funktionstrennung Gastronomie</string>
    <string name="switch_interferenceUsagePatternHotel">Funktionstrennung Hotel/Seminar</string>
    <string name="switch_interferenceUsagePatternLiving">Funktionstrennung Wohnen</string>
    <string name="switch_interferenceUsagePatternSeparationOfFunctions">Es soll eine Funktionstrennung stattfinden</string>
    <string name="switch_interferenceUsagePatternTechnology">Funktionstrennung Technik</string>
    <string name="switch_horizontal">horizentale Erweiterung</string>
    <string name="switch_horizontalDensity">horizontale Verdichtung</string>
    <string name="switch_moveBuilding">Gebäudeteile ziehen um</string>
    <string name="switch_newPlace">Landgewinnung (Pfahlgründung)</string>
    <string name="switch_pets">In der Projektgruppe gibt es Tiere</string>
    <string name="switch_spotsFixedPointsForParentFunction">Es gibt Fixpunkte für übergeordnete Funktionen </string>
    <string name="switch_spotsPlacesForNetworking">Es gibt Orte für Vernetzung</string>
    <string name="switch_substituition">Substitution (Ersatz durch Großform)</string>
    <string name="switch_universal_space_conceptAutarky">Autarkie erwünscht</string>
    <string name="switch_universal_space_conceptBuildingsWithCenter">Die Gebäude sollen ein Zentrum besitzen</string>
    <string name="switch_universal_space_conceptHolisticWayOfLife">Eine ganzheitliche Lebensweise ist erwünscht</string>
    <string name="switch_universal_space_conceptHorizontalAxis">Gebäude sollen über eine horizontale Achse verfügen</string>
    <string name="switch_universal_space_conceptLightAxis">Gebäude sollen über eine Licht-Achse verfügen</string>
    <string name="switch_universal_space_conceptInsideOutsideRelation">"Innen-Aussen"-Beziehung/Bezug nach "außen"</string>
    <string name="switch_universal_space_conceptRenewableEnergies">Erneuerbare Ennergien zur (Selbst-)Versorgung</string>
    <string name="switch_universal_space_conceptSustainableLife">Nachhaltige Lebensweise</string>
    <string name="switch_universal_space_conceptVeganism">Alle Nutzer der Nutzergruppe sind Veganer</string>
    <string name="switch_universal_space_conceptVentilation">Es soll eine Belüftung geben</string>
    <string name="switch_universal_space_conceptVerticalAxis">Gebäude sollen über eine vertikale Achse verfügen</string>
    <string name="switch_universal_space_conceptWorkOnSite">Es wird vor Ort gearbeitet</string>
    <string name="switch_userGroupFlexibility">Die Nutzergruppe ist flexibel</string>
    <string name="switch_userGroupProcessOrientated">Die Nutzergruppe ist prozessorientiert</string>
    <string name="switch_vertical">vertikale Erweiterung (neues OG)</string>
    <string name="switch_villageStructure">dorfähnliche Struktur</string>
    <string name="tool_barriers">Geben Sie die Werte für das Tool Barrieren ein</string>
    <string name="tool_building_structure">Geben Sie die Werte für das Tool Baustruktur ein</string>
    <string name="tool_dynamics_of_user_group">Geben Sie die Werte für das Tool Dynamik der Nutzergruppe ein</string>
    <string name="tool_infrastructure">Geben Sie die Werte für das Tool Infrastruktur ein</string>
    <string name="tool_interferenceUsagePattern">Geben Sie die Werte für das Tool Interferenz Nutzungsmuster ein</string>
    <string name="tool_modul">Geben Sie die Werte für das Tool Modul ein</string>
    <string name="tool_placeholder">Geben Sie die Werte für das Tool Platzhalter ein</string>
    <string name="tool_spots">Geben Sie die Werte für das Tool Spots/Landmarks ein</string>
    <string name="tool_survival_logic">Geben Sie die Werte für das Tool Überlebenslogik ein</string>
    <string name="tool_universal_space_concept">Geben Sie die Werte für das Tool Universelle Raumlehre/-konzepte ein</string>
    <string name="txt_building">im Gebäude</string>
    <string name="txt_city_level">Stadtebene</string>
    <string name="txt_courtyard">Innenhof</string>
    <string name="txt_cultivation">Anbau</string>
    <string name="txt_description_tools">Bitte wählen Sie alle passenden Tools aus</string>
    <string name="txt_extension">Geben Sie Werte für die Erweiterung an</string>
    <string name="txt_individual_level">Individuelle Ebene</string>
    <string name="txt_neighborhood_level">Nachbarschaftsebene</string>
    <string name="txt_otherOptions">Wählen Sie aus anderen Optionen</string>
    <string name="txt_otherPlace">an einem anderen Ort</string>
    <string name="txt_pgInfo">Wie viele Gruppen gibt es in dieser Projektgruppe?</string>
    <string name="txt_properties">Grundstück Draufsicht</string>
    <string name="txt_relations">Beziehungen</string>
    <string name="txt_sideView">Seitenansicht</string>
    <string name="txt_topView">Draufsicht</string>
    <string name="wall">Mauer</string>
    <string name="txt_person_level">Personen</string>
    <string name="btn_person">Anzahl</string>
    <string name="person">Wählen Sie die Personenanzahl aus:</string>
    <string name="tool_person">Geben Sie die Werte für das Tool Anzahl ein.</string>
    <string name="geschlecht">Geben Sie die Werte für das Tool Geschlecht ein.</string>
    <string name="geschlecht2">Wählen Sie das Geschlecht aus:</string>
    <string name="alter">Geben Sie die Werte für das Tool Alter ein.</string>
    <string name="alter2">Wählen Sie das Alter aus:</string>
    <string name="household">Geben Sie die Werte für das Tool Haushalt ein.</string>
    <string name="household2">Wählen Sie einen Haushalt aus:</string>
</resources>
