<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="studienprojekt.normann.marc.citygen.Universal_space_concept">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingTop="0dp"
        app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/information_universal_space_concept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tool_universal_space_concept"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/switch_universal_space_conceptVeganism"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/switch_universal_space_conceptVeganism" />

                <Switch
                    android:id="@+id/switch_universal_space_conceptAutarky"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/switch_universal_space_conceptAutarky" />

                <Switch
                    android:id="@+id/switch_universal_space_conceptWorkOnSite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/switch_universal_space_conceptWorkOnSite" />

                <Switch
                    android:id="@+id/switch_universal_space_conceptHolisticWayOfLife"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/switch_universal_space_conceptHolisticWayOfLife" />

                <Switch
                    android:id="@+id/switch_universal_space_conceptInsideOutsideRelation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/switch_universal_space_conceptInsideOutsideRelation" />

                <Switch
                    android:id="@+id/switch_universal_space_conceptRenewableEnergies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/switch_universal_space_conceptRenewableEnergies" />

                <Switch
                    android:id="@+id/switch_universal_space_conceptSustainableLife"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/switch_universal_space_conceptSustainableLife" />

                <Switch
                    android:id="@+id/switch_universal_space_conceptVentilation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/switch_universal_space_conceptVentilation" />

                <Switch
                    android:id="@+id/switch_universal_space_conceptBuildingsWithCenter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/switch_universal_space_conceptBuildingsWithCenter" />

                <Switch
                    android:id="@+id/switch_universal_space_conceptLightAxis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/switch_universal_space_conceptLightAxis" />

                <Switch
                    android:id="@+id/switch_universal_space_conceptVerticalAxis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/switch_universal_space_conceptVerticalAxis" />

                <Switch
                    android:id="@+id/switch_universal_space_conceptHorizontalAxis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/switch_universal_space_conceptHorizontalAxis" />

            </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        android:onClick="saveData"
        android:text="@string/btn_save"/>

</android.support.constraint.ConstraintLayout>
